--- a/Applozic/Base.lproj/Applozic.storyboard
+++ b/Applozic/Base.lproj/Applozic.storyboard
@@ -1638,10 +1638,10 @@ Upload Image Button.centerX = scd_profile_BG.centerX + 50</string>
                         <subviews>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QaG-wG-Gle" userLabel="DummyView">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="90" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="3bd-KT-wrK">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="544"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="508"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="sectionIndexBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
@@ -1669,7 +1669,7 @@ Upload Image Button.centerX = scd_profile_BG.centerX + 50</string>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Npf-hG-Fxp">
-                                <rect key="frame" x="0.0" y="544" width="600" height="56"/>
+                                <rect key="frame" x="0.0" y="508" width="600" height="56"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6XL-ms-PBf">
                                         <rect key="frame" x="548" y="5" width="44" height="44"/>
@@ -1739,19 +1739,19 @@ Upload Image Button.centerX = scd_profile_BG.centerX + 50</string>
                                 </variation>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have no conversation." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sTD-T1-vIc">
-                                <rect key="frame" x="20" y="261.5" width="560" height="21"/>
+                                <rect key="frame" x="20" y="243.5" width="560" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1sI-lr-lrM">
-                                <rect key="frame" x="0.0" y="523" width="600" height="21"/>
+                                <rect key="frame" x="0.0" y="487" width="600" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2ki-he-soP">
-                                <rect key="frame" x="0.0" y="494" width="600" height="50"/>
+                                <rect key="frame" x="0.0" y="458" width="600" height="50"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_action_camera" translatesAutoresizingMaskIntoConstraints="NO" id="3sa-6d-hOq">
                                         <rect key="frame" x="469" y="1" width="67" height="49"/>
@@ -1832,7 +1832,7 @@ Upload Image Button.centerX = scd_profile_BG.centerX + 50</string>
                             <constraint firstItem="asq-OT-e0Z" firstAttribute="centerY" secondItem="QaG-wG-Gle" secondAttribute="centerY" identifier="MActivity Indicator.centerY" id="Gm6-YJ-4jr"/>
                             <constraint firstItem="3bd-KT-wrK" firstAttribute="leading" secondItem="QaG-wG-Gle" secondAttribute="leading" identifier="MTable View.Leading" id="LH0-Rj-rKi"/>
                             <constraint firstItem="IKJ-fO-atY" firstAttribute="trailing" secondItem="Bt8-EH-qKK" secondAttribute="trailing" id="SBO-AN-gyP"/>
-                            <constraint firstItem="Npf-hG-Fxp" firstAttribute="bottom" secondItem="QaG-wG-Gle" secondAttribute="bottom" identifier="CheckBottom" id="UVH-LX-Lg7"/>
+                            <constraint firstItem="Npf-hG-Fxp" firstAttribute="bottom" secondItem="QaG-wG-Gle" secondAttribute="bottom" constant="-36" identifier="CheckBottom" id="UVH-LX-Lg7"/>
                             <constraint firstItem="Bt8-EH-qKK" firstAttribute="leading" secondItem="3bd-KT-wrK" secondAttribute="leading" identifier="Load Earlier Action.leading" id="Yft-c9-bRs"/>
                             <constraint firstItem="3bd-KT-wrK" firstAttribute="top" secondItem="QaG-wG-Gle" secondAttribute="top" identifier="MTable View.top" id="bVW-y4-4Ob"/>
                             <constraint firstItem="asq-OT-e0Z" firstAttribute="top" secondItem="IKJ-fO-atY" secondAttribute="bottom" constant="74" identifier="ActivityIndicatorTop" id="eu3-wg-Veb"/>
