--- a/Applozic/Base.lproj/Applozic.storyboard
+++ b/Applozic/Base.lproj/Applozic.storyboard
@@ -1684,7 +1684,6 @@ Upload Image Button.centerX = scd_profile_BG.centerX + 50</string>
                                             <constraint firstAttribute="width" constant="44" identifier="sendButtonWidth" id="4Tu-uT-hOx"/>
                                         </constraints>
                                         <color key="tintColor" red="0.12941176469999999" green="0.47058823529999999" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <state key="normal" image="SendButton20"/>
                                         <connections>
                                             <action selector="sendAction:" destination="rWz-Vg-7Ha" eventType="touchDown" id="FNG-6d-x1V"/>
                                         </connections>
@@ -1714,6 +1713,7 @@ Upload Image Button.centerX = scd_profile_BG.centerX + 50</string>
                                             <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                                         </accessibility>
                                         <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="LN7-cu-t3n"/>
                                             <constraint firstAttribute="width" constant="44" id="oOD-ac-EA7"/>
                                         </constraints>
                                         <state key="normal" image="attachments"/>
@@ -2080,7 +2080,6 @@ Upload Image Button.centerX = scd_profile_BG.centerX + 50</string>
     <resources>
         <image name="DELETEIOSX" width="50" height="50"/>
         <image name="Path" width="360" height="186"/>
-        <image name="SendButton20" width="44" height="44"/>
         <image name="applozic_edit" width="18" height="18"/>
         <image name="applozic_group_icon" width="84" height="84"/>
         <image name="applozic_uploadCamera" width="20" height="16"/>
